--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </menu>
       </nav>
 
-      <div class="hero">
+      <section class="hero">
         <div class="hero__content">
           <img src="images/illustration-intro.png" alt="" class="hero__img" />
           <h1 class="hero__heading">
@@ -47,7 +47,7 @@
           </p>
           <button class="hero__button button">Get Started</button>
         </div>
-      </div>
+      </section>
 
       <section class="features">
         <img
